--- a/app/src/main/res/layout/fragment_note_listing.xml
+++ b/app/src/main/res/layout/fragment_note_listing.xml
@@ -21,10 +21,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
-        android:layout_width="409dp"
-        android:layout_height="645dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@id/buton"
         app:layout_constraintTop_toBottomOf="@+id/buton" />
 
     <ProgressBar
